fix for not correctly calculated duration for call logs & not-rendering icons on firefox

--- a/app/styles/app/_icomoon.scss
+++ b/app/styles/app/_icomoon.scss
@@ -1,32 +1,23 @@
-// @font-face {
-// 	font-family: 'icomoon';
-// 	src:url('../fonts/icomoon.eot');
-// 	src:url('../fonts/icomoon.eot?#iefix') format('embedded-opentype'),
-// 		url('../fonts/icomoon.woff') format('woff'),
-// 		url('../fonts/icomoon.ttf') format('truetype'),
-// 		url('../fonts/icomoon.svg#icomoon') format('svg');
-// 	font-weight: normal;
-// 	font-style: normal;
-// }
-
 @font-face {
-	font-family: 'icomoon';
-	src:url('../styles/fonts/icomoon.svg#icomoon') format('svg');
-	font-weight: normal;
-	font-style: normal;
+  font-family: 'icomoon';
+  src:url('../styles/fonts/icomoon.eot');
+  src:url('../styles/fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+  url('../styles/fonts/icomoon.woff') format('woff'),
+  url('../styles/fonts/icomoon.ttf') format('truetype'),
+  url('../styles/fonts/icomoon.svg#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 /* Use the following CSS code if you want to use data attributes for inserting your icons */
 [data-icon]:before {
-	font-family: 'icomoon';
-	content: attr(data-icon);
-	speak: none;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
-
-  /* Better Font Rendering =========== */
+  font-family: 'icomoon';
+  content: attr(data-icon);
+  speak: none;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
